# Netizen-alt

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  config.example.toml  readme.md
.github/workflows/: update-profile.yml
src/: config.rs  generator.rs  github.rs  main.rs
templates/: profile.md
